--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,11 @@ kramdown:
 plugins:
   - jekyll-feed
 
+source: .
+destination: ./_site
+layouts_dir: _layouts
+includes_dir: _includes
+
 sass:
   sass_dir: _sass
   style: compressed
