--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Jetpacks & Rollerskates
 email: blake.stvnsn@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Jetpacks and Rollerskates, the work and ramblings of Blake Stevenson. A UX/UI designer, illustrator and all round pop culture addict from the north.
-url: 'http://jetpacksandrollerskates.com'
+url: 'https://jetpacksandrollerskates.github.io/website'
 show_excerpts: true
 instagram_username: jetpacksandrollerskates
 twitter_username: blakestevenson
